--- a/2_Stochastic_Variational_Inference_Part1.ipynb
+++ b/2_Stochastic_Variational_Inference_Part1.ipynb
@@ -29,30 +29,48 @@
     "\n",
     "We're goint ot assume we've already defined our model in Pyro (for model details on how this is done... see previous work)n As a quick reminder, the model is given as a stochastic function `model(*args, *kwarg)`, which, in general case takes arguments. The different peices of `model()` are encoded via the mapping: \n",
     "\n",
-    "1) Observations <--> `pyro.sample` with the `obs` arguments\n",
-    "2) latent random variables <--> `pyro.sample`\n",
-    "3) parameters <--> `pyro.param` \n",
+    "1. Observations <--> `pyro.sample` with the `obs` arguments\n",
+    "2. latent random variables <--> `pyro.sample`\n",
+    "3. parameters <--> `pyro.param` \n",
     "\n",
-    "Now let's establish some notation. The model has observation **x** and latent random variables **z** as well as parameters **theta**. It has a joint probability density of the form... \n",
+    "Now let's establish some notation. The model has observation **x** and latent random variables **z** as well as parameters **$\\theta$**. It has a joint probability density of the form... \n",
     "\n",
-    "P_theta(x,z) = P_theta(x|z)*P_theta(z)\n",
+    "\n",
+    "$$P_\\theta(x,y) = P_\\theta(x|z)*P_\\theta(z)$$\n",
     "\n",
     "$$e^{i\\pi} + 1 = 0$$\n",
     "\n",
-    "We assume that the various probaility distributions p_i that make up P_theta(x,z) have the following properties: \n",
     "\n",
-    "1) we can sample from each p_i \n",
-    "2) we can compute pointwise log pdf p_i \n",
-    "3) p_i is differnetiable w.r.t. the parameters theta\n",
+    "We assume that the various probaility distributions $ \\pi $ that make up $ P_{\\theta}(x,z) $ have the following properties: \n",
+    "\n",
+    "1. we can sample from each $ \\pi$ \n",
+    "2. we can compute pointwise log pdf $\\pi$ \n",
+    "3. $\\pi$ is differnetiable w.r.t. the parameters $\\theta$\n",
     "\n",
     "# Model Learning \n",
     "\n",
     "In this context our criterion for learning a good model will be maximizing the lgo evidence, i.e want to find the value of **theta** given by \n",
     "\n",
+    "$$\\theta_{max} = argmax_{\\theta}(\\log{P_{\\theta}(x)})$$\n",
+    "\n",
     "theta_max = argmax_theat (log*p_theta(x))\n",
     "\n",
     "where the log evidence log*p_theta(x) is given by \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
